Migrate yang-repo-spi to JUnit5
We have a few tests, migrate them over.

Change-Id: Ib6c8efd04c0f0a6d4cd9fe4b7b6b88bc736599e0
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>