@@ -7,19 +7,19 @@
  */
 package org.opendaylight.yangtools.yang.model.repo.spi;
 
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.Mockito.mock;
 
 import com.google.common.util.concurrent.AsyncFunction;
 import com.google.common.util.concurrent.ListenableFuture;
 import com.google.common.util.concurrent.SettableFuture;
-import java.util.Arrays;
+import java.util.List;
 import java.util.concurrent.Future;
-import org.junit.Test;
-import org.junit.runner.RunWith;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
-import org.mockito.junit.MockitoJUnitRunner;
+import org.mockito.junit.jupiter.MockitoExtension;
 import org.opendaylight.yangtools.yang.model.repo.api.EffectiveModelContextFactory;
 import org.opendaylight.yangtools.yang.model.repo.api.SchemaContextFactoryConfiguration;
 import org.opendaylight.yangtools.yang.model.repo.api.SchemaRepository;
@@ -29,7 +29,7 @@ import org.opendaylight.yangtools.yang.model.repo.api.YangSchemaSourceRepresenta
 import org.opendaylight.yangtools.yang.model.repo.api.YinXmlSchemaSource;
 import org.opendaylight.yangtools.yang.model.repo.spi.PotentialSchemaSource.Costs;
 
-@RunWith(MockitoJUnitRunner.class)
+@ExtendWith(MockitoExtension.class)
 public class SchemaSourceTransformerTest {
     public static final Class<YangSchemaSourceRepresentation> SRC_CLASS = YangSchemaSourceRepresentation.class;
     public static final Class<YinXmlSchemaSource> DST_CLASS = YinXmlSchemaSource.class;
@@ -89,8 +89,7 @@ public class SchemaSourceTransformerTest {
         final SchemaSourceListener listener = schema;
         p.registerSchemaSourceListener(listener);
 
-        final PotentialSchemaSource<?>[] potList = { foo.getPotentialSchemSource() };
-        final Iterable<PotentialSchemaSource<?>> sources = Arrays.asList(potList);
+        final List<PotentialSchemaSource<?>> sources = List.of(foo.getPotentialSchemSource());
         listener.schemaSourceRegistered(sources);
         final ListenableFuture<YinXmlSchemaSource> source = schema.getSource(sourceIdentifier);
         assertNotNull(source);
@@ -101,22 +100,18 @@ public class SchemaSourceTransformerTest {
     }
 
     private static class Foo<T extends SchemaSourceRepresentation> {
-
         final PotentialSchemaSource<T> src;
 
         Foo(final SourceIdentifier sourceIdentifier, final Class<T> representation, final Costs cost) {
-            this.src = PotentialSchemaSource.create(sourceIdentifier, representation,
-                    cost.getValue());
+            this.src = PotentialSchemaSource.create(sourceIdentifier, representation, cost.getValue());
         }
 
         public PotentialSchemaSource<T> getPotentialSchemSource() {
             return this.src;
         }
-
     }
 
     private static class Registrator extends AbstractSchemaSourceCache<YangSchemaSourceRepresentation> {
-
         Registrator(final SchemaSourceRegistry consumer, final Class<YangSchemaSourceRepresentation> srcClass,
                 final Costs cost) {
             super(consumer, srcClass, cost);
